<!--
  ~ Copyright (c) 2014.
  ~ Florian Bauer, flbaue@posteo.de
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="flbaue.amando4.app.MainActivity">

    <TextView
        style="@style/textStyleHeadline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_txt_welcome" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="btnClickSendPosition"
        android:text="@string/main_btn_send_position" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="btnClickManageGeoContacts"
        android:text="@string/main_btn_manage_geo_contacts" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="btnClickShowMap"
        android:text="@string/main_btn_show_map" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="btnClickStartSimulation"
        android:text="@string/main_btn_start_simulation" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
